--- a/html/index.html
+++ b/html/index.html
@@ -76,7 +76,7 @@
                     <div class="container clearfix">
 
                         <div id="section-home" class="heading-block title-center nobottomborder page-section">
-                            <h1>Personal portfolio</h1>
+                            <h1>Welcome</h1>
                             <span>Building <span class="color">responsive</span> web sites for <span class="color">all</span> screen types and sizes</span>
                         </div>
 
@@ -85,6 +85,8 @@
                         </div>
 
                         <div class="clear"></div>
+                        
+                        <!--
 
                         <div class="col_two_third topmargin nobottommargin">
 
@@ -119,6 +121,8 @@
                         </div>
 
                         <div class="clear"></div>
+                        
+                        -->
 
                         <div class="divider divider-short divider-center"><i class="icon-circle"></i></div>
 
@@ -275,7 +279,7 @@
                                                 <div class="divider divider-short divider-center"><i class="icon-circle"></i></div>
                         -->
                         <div id="section-contact" class="heading-block title-center page-section">
-                            <h2>Get in Touch with us</h2>
+                            <h2>Get in Touch</h2>
                             <span>Contact me using the form below</span>
                         </div>
 
@@ -388,22 +392,22 @@
 
                         <div class="col_half col_last tright">
                             <div class="fright clearfix">
-                                <a href="#" class="social-icon si-small si-borderless si-facebook">
+                                <a href="https://www.facebook.com/johan.havenga37" target="_blank" class="social-icon si-small si-borderless si-facebook">
                                     <i class="icon-facebook"></i>
                                     <i class="icon-facebook"></i>
                                 </a>
 
-                                <a href="#" class="social-icon si-small si-borderless si-twitter">
+                                <a href="https://twitter.com/johanphavenga" target="_blank" class="social-icon si-small si-borderless si-twitter">
                                     <i class="icon-twitter"></i>
                                     <i class="icon-twitter"></i>
                                 </a>
 
-                                <a href="#" class="social-icon si-small si-borderless si-gplus">
+                                <a href="https://plus.google.com/+JohanHavenga" target="_blank" class="social-icon si-small si-borderless si-gplus">
                                     <i class="icon-gplus"></i>
                                     <i class="icon-gplus"></i>
                                 </a>
 
-                                <a href="#" class="social-icon si-small si-borderless si-linkedin">
+                                <a href="https://www.linkedin.com/in/johanhavenga/" target="_blank" class="social-icon si-small si-borderless si-linkedin">
                                     <i class="icon-linkedin"></i>
                                     <i class="icon-linkedin"></i>
                                 </a>
